@@ -2,6 +2,10 @@ Release ...
 * troff: The ".fkern" request now properly refers to a single mounted
   instance of a font; it previously affected all mounted instances of
   one font metrics file.
+* troff: Character replacements with ".tr" where the target character
+  does not originate from the current font but is found in the fallback
+  sequence are now performed correctly. Previously, an invalid heap
+  access could occur, resulting in the choice of random characters.
 
 Release 060430
 * troff/dpost: Links and anchors in PDF documents can now be defined;
